--- a/src/components/Dropdown.less
+++ b/src/components/Dropdown.less
@@ -172,7 +172,7 @@
     right: 0;
     transform: scaleY(0);
     transition: transform .5s cubic-bezier(.68, -.55, .265, 1.55), opacity .5s cubic-bezier(.68, -.55, .265, 1.55);
-    z-index: -1;
+    z-index: 6;
 
     .dropdown_open & {
       opacity: 1;
